# discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
bot/cogs/logs/: cog.py
bot/cogs/moderation/: cog.py
bot/cogs/queue/: cog.py
bot/cogs/suggestions/: cog.py
bot/cogs/voice/: cog.py
bot/core/: bot.py  config.py
bot/db/: client.py  models.py
bot/db/migrations/: 001_initial.sql  002_voice_sessions.sql  003_game_queue.sql  004_queue_message_id.sql  005_queue_lane.sql  005_suggestions.sql  006_queue_cant_attend.sql
docs/: cogs.md  configuration.md  deployment.md
tests/: test_config.py  test_embeds.py  test_suggestions.py
